# fractal1d

./: fractal1d.cabal
app/: Main.hs
bench/: Main.hs
src/Data/: Fractal1D.hs
test/Data/: Fractal1DSpec.hs
