name:                fractal1d
version:             0.1.0.0
synopsis:            Initial project template from stack, using hspec and quickcheck
description:         Please see README.md
homepage:            https://github.com/corajr/fractal1d#readme
license:             BSD3
license-file:        LICENSE
author:              Cora Johnson-Roberson
maintainer:          me@corajr.com
copyright:           2016 Author name here
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Data.Fractal1D
  build-depends:       base >= 4.7 && < 5
                     , vector
                     , hsndfile
                     , hsndfile-vector
  default-language:    Haskell2010

executable fractal1d
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -O2 -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , fractal1d
  default-language:    Haskell2010

executable fractalbench
  hs-source-dirs:      bench
  main-is:             Main.hs
  ghc-options:         -threaded -O2 -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , fractal1d
                     , criterion
  default-language:    Haskell2010


test-suite fractal1d-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , fractal1d
                     , hspec
                     , QuickCheck
                     , vector
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/corajr/fractal1d
